// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarAll matches snapshot 1`] = `
<div>
  <div
    class="sc-AxjAm jfmAOU calendar"
  >
    <div
      class="sc-AxirZ geEfWa"
    >
      <span
        class="sc-AxhCb hJMRfN"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
      <h2
        class="sc-AxiKw csrSaT"
      >
        September 2020
      </h2>
      <span
        class="sc-AxhCb hJMRfN right"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
    </div>
    <div
      class="sc-AxhUy hfeXDI"
    >
      <h5
        class="sc-AxgMl iLoYic"
      >
        Sun
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Mon
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Tue
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Wed
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Thu
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Fri
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Sat
      </h5>
    </div>
    <div
      class="sc-AxheI iGtvIU"
    >
      <h4
        class="sc-Axmtr hMVYMT"
      >
        Fazer exercício
      </h4>
      <div
        class="sc-AxmLO bELhKU"
      >
         
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            27
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa today "
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            28
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            29
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            30
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa not-done"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            1
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            2
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            3
          </span>
        </div>
         
      </div>
    </div>
    <div
      class="sc-AxheI iGtvIU"
    >
      <h4
        class="sc-Axmtr hMVYMT"
      >
        Fazer dieta
      </h4>
      <div
        class="sc-AxmLO bELhKU"
      >
         
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            27
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa today "
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            28
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            29
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            30
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            1
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            2
          </span>
        </div>
        <div
          class="sc-fzozJi ccINIa"
        >
          <span
            class="sc-fzoLsD gOMKUi"
          >
            3
          </span>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`CalendarSingle matches snapshot 1`] = `
<div>
  <div
    class="sc-AxjAm jfmAOU calendar"
  >
    <div
      class="sc-AxirZ geEfWa"
    >
      <span
        class="sc-AxhCb hJMRfN"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
      <h2
        class="sc-AxiKw csrSaT"
      >
        September 2020
      </h2>
      <span
        class="sc-AxhCb hJMRfN right"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
    </div>
    <div
      class="sc-AxhUy hfeXDI"
    >
      <h5
        class="sc-AxgMl iLoYic"
      >
        Sun
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Mon
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Tue
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Wed
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Thu
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Fri
      </h5>
      <h5
        class="sc-AxgMl iLoYic"
      >
        Sat
      </h5>
    </div>
    <div
      class="sc-AxmLO bELhKU"
    >
       
      <div
        class="sc-fzozJi ccINIa disabled "
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          30
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa disabled "
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          31
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          1
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          2
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          3
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          4
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          5
        </span>
      </div>
       
    </div>
    <div
      class="sc-AxmLO bELhKU"
    >
       
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          6
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          7
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          8
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          9
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          10
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          11
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          12
        </span>
      </div>
       
    </div>
    <div
      class="sc-AxmLO bELhKU"
    >
       
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          13
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          14
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          15
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          16
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          17
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          18
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          19
        </span>
      </div>
       
    </div>
    <div
      class="sc-AxmLO bELhKU"
    >
       
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          20
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          21
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          22
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          23
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          24
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          25
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          26
        </span>
      </div>
       
    </div>
    <div
      class="sc-AxmLO bELhKU"
    >
       
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          27
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa today "
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          28
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          29
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          30
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa disabled not-done"
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          1
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa disabled "
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          2
        </span>
      </div>
      <div
        class="sc-fzozJi ccINIa disabled "
      >
        <span
          class="sc-fzoLsD gOMKUi"
        >
          3
        </span>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Habits Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzpjYC izvAVX"
  >
    <h1
      class="sc-fznxsB iTQhax"
    >
      Habits
    </h1>
    <div
      class="sc-fznJRM cBJzUp"
    >
      <div
        class="sc-fznWqX dZCTFs"
      >
        <div
          class="sc-fzoiQi gKygiC"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="habits-view"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="habits-view"
              role="button"
              tabindex="0"
            >
              All
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="all"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
        <h3
          class="sc-fzqARJ lfDBcG smaller"
        >
          2
        </h3>
      </div>
      <div
        class="sc-fzqNqU hQTkrp"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-fzpans bizqXm"
        >
          <h2
            class="sc-fznyAO eKnwhs"
          >
            Settings
          </h2>
          <div
            class="sc-fznKkj dFiY"
          >
            <div
              class="sc-fznZeY colRAS"
            >
              <label
                class="sc-fzokOt kgBGLn"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-fzqBZW ddlYPz"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="date"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-fzplWN chjtWg"
        />
      </div>
    </div>
  </div>
  <section
    class="sc-fzoyTs gUbeoJ"
  >
    <div
      class="sc-AxjAm jfmAOU calendar"
    >
      <div
        class="sc-AxirZ geEfWa"
      >
        <span
          class="sc-AxhCb hJMRfN"
        >
          <svg>
            chevron.svg
          </svg>
        </span>
        <h2
          class="sc-AxiKw csrSaT"
        >
          September 2020
        </h2>
        <span
          class="sc-AxhCb hJMRfN right"
        >
          <svg>
            chevron.svg
          </svg>
        </span>
      </div>
      <div
        class="sc-AxhUy hfeXDI"
      >
        <h5
          class="sc-AxgMl iLoYic"
        >
          Sun
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Mon
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Tue
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Wed
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Thu
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Fri
        </h5>
        <h5
          class="sc-AxgMl iLoYic"
        >
          Sat
        </h5>
      </div>
      <div
        class="sc-AxheI iGtvIU"
      >
        <h4
          class="sc-Axmtr hMVYMT"
        >
          Fazer exercício
        </h4>
        <div
          class="sc-AxmLO bELhKU"
        >
           
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              27
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa today "
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              28
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              29
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              30
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa not-done"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              1
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              2
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              3
            </span>
          </div>
           
        </div>
      </div>
      <div
        class="sc-AxheI iGtvIU"
      >
        <h4
          class="sc-Axmtr hMVYMT"
        >
          Fazer dieta
        </h4>
        <div
          class="sc-AxmLO bELhKU"
        >
           
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              27
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa today "
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              28
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              29
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              30
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              1
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              2
            </span>
          </div>
          <div
            class="sc-fzozJi ccINIa"
          >
            <span
              class="sc-fzoLsD gOMKUi"
            >
              3
            </span>
          </div>
           
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`HabitsSettings matches snapshot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-fzpans bizqXm"
  >
    <h2
      class="sc-fznyAO eKnwhs"
    >
      Settings
    </h2>
    <div
      class="sc-fznKkj dFiY"
    >
      <div
        class="sc-fznZeY colRAS"
      >
        <label
          class="sc-fzokOt kgBGLn"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-fzqBZW ddlYPz"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-fzplWN chjtWg"
  />
</div>
`;
